# ipa_aruco_marker_detection

./: CMakeLists.txt  package.xml
config/: detect_markers_config.yaml
include/detect_markers/: detect_markers.h
launch/: detect_markers.launch
src/: camera_calibration.cpp  camera_calibration.cpp.autosave  create_aruco_grid_board.cpp  create_aruco_markers_4x4.cpp  detect_markers.cpp  detect_markers.cpp.autosave  main.cpp
